--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
     - docker build -t deepak2985/docker-react -f Dockerfile.dev .
 
 script:
-    - docker run deepak2985/docker-react npm run test -- --coverage
+    - docker run -e CI=true deepak2985/docker-react npm run test
