--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,15 @@ before_install:
 
 script:
     - docker run -e CI=true deepak2985/docker-react npm run test
+
+deploy:
+    provider: elasticbeanstalk
+    region: "us-east-2"   
+    app: "docker-react"
+    env: "DockerReact-env"   
+    bucket_name: "elasticbeanstalk-us-east-2-442241413559"
+    bucket_path: "docker-react"
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
